--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
     - REPOSITORY="encodeering"
   matrix:
     - ARCH=armhf VERSION=8.2 VARIANT=apache
+    - ARCH=amd64 VERSION=8.2 VARIANT=apache
 
 before_script:
 - sudo cat /proc/sys/fs/binfmt_misc/status
