--- a/apache/apache/default-ssl.conf
+++ b/apache/apache/default-ssl.conf
@@ -28,6 +28,36 @@
             Header unset X-Powered-By
         </IfModule>
 
+        <IfModule mod_expires.c>
+            <FilesMatch "\.(jpe?g|png|gif|js|css|svg|woff)$">
+                ExpiresActive On
+                ExpiresDefault "access plus 1 week"
+            </FilesMatch>
+        </IfModule>
+
+        <IfModule mod_deflate.c>
+            AddOutputFilterByType DEFLATE text/plain
+            AddOutputFilterByType DEFLATE text/html
+            AddOutputFilterByType DEFLATE text/xml
+            AddOutputFilterByType DEFLATE text/css
+            AddOutputFilterByType DEFLATE text/javascript
+            AddOutputFilterByType DEFLATE image/svg+xml
+            AddOutputFilterByType DEFLATE image/x-icon
+            AddOutputFilterByType DEFLATE application/xml
+            AddOutputFilterByType DEFLATE application/xhtml+xml
+            AddOutputFilterByType DEFLATE application/rss+xml
+            AddOutputFilterByType DEFLATE application/javascript
+            AddOutputFilterByType DEFLATE application/x-javascript
+            AddOutputFilterByType DEFLATE application/x-font-woff
+
+            DeflateCompressionLevel 9
+
+            BrowserMatch ^Mozilla/4 gzip-only-text/html
+            BrowserMatch ^Mozilla/4\.0[678] no-gzip
+            BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
+            BrowserMatch \bOpera !no-gzip
+        </IfModule>
+
         <FilesMatch "\.(cgi|shtml|phtml|php)$">
                 SSLOptions +StdEnvVars
         </FilesMatch>
