--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ env:
   matrix:
     - ARCH=armhf VERSION=8.2 VARIANT=apache
     - ARCH=amd64 VERSION=8.2 VARIANT=apache
+    - ARCH=armhf VERSION=8.2 VARIANT=apache CUSTOM=ssl
+    - ARCH=amd64 VERSION=8.2 VARIANT=apache CUSTOM=ssl
 
 before_script:
 - sudo cat /proc/sys/fs/binfmt_misc/status
