deactivates armhf build on travis
* build exceeds to maximum duration of 50min due some underlying hardware limitations
** we have to see/wait if the upcoming hw infrastructure provides a multi core environment

NOTE

* semaphore ci has taken the responsibility for the next time

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ env:
     - PROJECT="owncloud"
     - REPOSITORY="encodeering"
   matrix:
-    - ARCH=armhf VERSION=8.2 VARIANT=apache
+    #- ARCH=armhf VERSION=8.2 VARIANT=apache
     - ARCH=amd64 VERSION=8.2 VARIANT=apache
-    - ARCH=armhf VERSION=8.2 VARIANT=apache CUSTOM=ssl
+    #- ARCH=armhf VERSION=8.2 VARIANT=apache CUSTOM=ssl
     - ARCH=amd64 VERSION=8.2 VARIANT=apache CUSTOM=ssl
 
 before_script:
