--- a/.patch/10.0/apache/Dockerfile.patch
+++ b/.patch/10.0/apache/Dockerfile.patch
@@ -1,7 +1,16 @@
 diff --git a/10.0/apache/Dockerfile b/10.0/apache/Dockerfile
-index 45ab61c..1196352 100644
+index 45ab61c..5e98b04 100644
 --- a/10.0/apache/Dockerfile
 +++ b/10.0/apache/Dockerfile
+@@ -1,7 +1,7 @@
+ # https://owncloud.com/minimum-product-requirements/ ("5.6 recommended")
+ # https://doc.owncloud.org/server/10.0/admin_manual/installation/system_requirements.html ("PHP (5.6+ or 7.0+)")
+ # https://doc.owncloud.org/server/9.0/admin_manual/installation/system_requirements.html ("PHP 7.0")
+-FROM php:7.0-apache
++FROM php:apache
+
+ RUN apt-get update && apt-get install -y --no-install-recommends \
+ 		bzip2 \
 @@ -43,7 +43,8 @@ RUN set -ex \
  	&& pecl install redis-3.1.2 \
  	&& docker-php-ext-enable apcu memcached redis
