switches from version 8.x to 10.x
* download for 8.x is not available anymore
* entry point changed

--- a/contrib/ssl/apache/Dockerfile
+++ b/contrib/ssl/apache/Dockerfile
@@ -25,8 +25,8 @@ RUN        a2enmod ssl      \
  &&        a2ensite default \
  &&        a2ensite default-ssl
 
-RUN        sed -i -e '/exec/i\source /etc/apache2/envvars'                                   /entrypoint.sh \
- &&        sed -i -e '/chown -R/a\        find /var/www/html -type d -exec chmod 750 {} \\;' /entrypoint.sh \
- &&        sed -i -e '/chown -R/a\        find /var/www/html -type f -exec chmod 640 {} \\;' /entrypoint.sh
+RUN        sed -i -e '/exec/i\source /etc/apache2/envvars'                                   /usr/local/bin/docker-entrypoint.sh \
+ &&        sed -i -e '/chown -R/a\        find /var/www/html -type d -exec chmod 750 {} \\;' /usr/local/bin/docker-entrypoint.sh \
+ &&        sed -i -e '/chown -R/a\        find /var/www/html -type f -exec chmod 640 {} \\;' /usr/local/bin/docker-entrypoint.sh
 
 EXPOSE     443
