--- a/.travis.yml
+++ b/.travis.yml
@@ -20,19 +20,20 @@ env:
     #- ARCH=armhf VERSION=10.0.3 VARIANT=apache VARIANTVERSION=7.0 CUSTOM=ssl
     - ARCH=amd64 VERSION=10.0.3 VARIANT=apache VARIANTVERSION=7.0 CUSTOM=ssl
 
+install:
+- bash <(curl https://raw.githubusercontent.com/encodeering/docker-ci/master/install.sh) 0.1.4
+
 before_script:
-- sudo -E sh .travis/prepare.sh
-- git clone https://github.com/docker-library/owncloud.git "$PROJECT"
-- (cd "$PROJECT" && git checkout "$COMMIT")
+- sudo -E bash ./module.sh "." "./setup.sh" "https://github.com/docker-library/owncloud.git" "modules/$PROJECT" "$COMMIT"
 
 script:
-- sudo -E sh .travis/build.sh
+- sudo -E bash ./module.sh "modules" "./build.sh"
 
 after_script:
 - docker images
 
 deploy:
-  script: sudo -E sh .travis/deploy.sh
+  script: sudo -E bash ./module.sh "." "./release.sh" "$CUSTOM"
   provider: script
   skip_cleanup: true
   on:
