--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ env:
     - BRANCH="$TRAVIS_BRANCH"
     - COMMIT="5c0f5a270e565410cc47046b29b04e4a5ec9e828"
   matrix:
-    #- ARCH=armhf VERSION=10.0.3 VARIANT=apache
-    - ARCH=amd64 VERSION=10.0.3 VARIANT=apache
-    #- ARCH=armhf VERSION=10.0.3 VARIANT=apache CUSTOM=ssl
-    - ARCH=amd64 VERSION=10.0.3 VARIANT=apache CUSTOM=ssl
+    #- ARCH=armhf VERSION=10.0.3 VARIANT=apache VARIANTVERSION=7.0
+    - ARCH=amd64 VERSION=10.0.3 VARIANT=apache VARIANTVERSION=7.0
+    #- ARCH=armhf VERSION=10.0.3 VARIANT=apache VARIANTVERSION=7.0 CUSTOM=ssl
+    - ARCH=amd64 VERSION=10.0.3 VARIANT=apache VARIANTVERSION=7.0 CUSTOM=ssl
 
 before_script:
 - sudo -E sh .travis/prepare.sh
