--- a/modules/owncloud-ssl/apache/Dockerfile
+++ b/modules/owncloud-ssl/apache/Dockerfile
@@ -5,7 +5,8 @@ MAINTAINER Michael Clausen <encodeering@gmail.com>
 ARG        DEFAULT_SHA=fdd55ad7cf9b495bccdd8465f37bbfe1577068b24abae0f3d934b6a1d1d29331
 ARG        DEFAULT_SSL_SHA=d073d698c49535c619cbcc5d0bf0c9b1b1370ff1afde2d618a6a178bc013a985
 
-RUN        mv /etc/apache2/sites-available/000-default.conf /etc/apache2/sites-available/default.conf
+RUN        a2dissite                       000-default \
+ &&        mv /etc/apache2/sites-available/000-default.conf /etc/apache2/sites-available/default.conf
 
 RUN        echo "$DEFAULT_SHA /etc/apache2/sites-available/default.conf"         | sha256sum -c - \
  &&        echo "$DEFAULT_SSL_SHA /etc/apache2/sites-available/default-ssl.conf" | sha256sum -c -
