extracts common vhost config from ssl vhost
* should be made available to all vhosts

--- a/modules/owncloud-ssl/apache/Dockerfile
+++ b/modules/owncloud-ssl/apache/Dockerfile
@@ -31,6 +31,7 @@ RUN        a2enmod ssl      \
  &&        a2enmod expires  \
  &&        a2enconf deflate \
  &&        a2enconf expires \
+ &&        a2enconf vhost   \
  &&        a2ensite default \
  &&        a2ensite default-ssl
 
