optimizes a few configurations with defaults from gregrickaby
* forks are allowed - "I've spent quite a bit of time compiling what I find to be optimial to me and my server. Feel free to fork this and make it your own."

NOTE

* https://github.com/gregrickaby/The-Perfect-Apache-Configuration

--- a/modules/owncloud-ssl/apache/Dockerfile
+++ b/modules/owncloud-ssl/apache/Dockerfile
@@ -26,8 +26,10 @@ RUN        a2enmod ssl      \
  &&        a2enmod headers  \
  &&        a2enmod deflate  \
  &&        a2enmod expires  \
+ &&        a2enmod mime     \
  &&        a2enconf deflate \
  &&        a2enconf expires \
+ &&        a2enconf mime    \
  &&        a2enconf vhost   \
  &&        a2enconf security\
  &&        a2ensite default \
