--- a/modules/owncloud-ssl/apache/Dockerfile
+++ b/modules/owncloud-ssl/apache/Dockerfile
@@ -14,19 +14,19 @@ COPY       php/docker-owncloud-php.ini /usr/local/etc/php/conf.d/
 COPY       apache/vconf/*.conf conf-available/
 COPY       apache/vhost/*.conf sites-available/
 
-RUN        a2enmod ssl      \
- &&        a2enmod headers  \
- &&        a2enmod deflate  \
- &&        a2enmod expires  \
- &&        a2enmod mime     \
+RUN        a2enmod ssl         \
+                   headers     \
+                   deflate     \
+                   expires     \
+                   mime        \
  &&        a2enconf docker-php \
- &&        a2enconf deflate \
- &&        a2enconf expires \
- &&        a2enconf mime    \
- &&        a2enconf vhost   \
- &&        a2enconf security\
- &&        a2ensite default \
- &&        a2ensite default-ssl
+                    deflate    \
+                    expires    \
+                    mime       \
+                    vhost      \
+                    security   \
+ &&        a2ensite default    \
+                    default-ssl
 
 RUN        sed -i -e '/exec/i\source /etc/apache2/envvars'                                                  /usr/local/bin/docker-entrypoint.sh \
  &&        sed -i -e '/chown -R/a\        find /var/www/html ! -perm 750 -a -type d -exec chmod 750 {} \\;' /usr/local/bin/docker-entrypoint.sh \
