replaces entrypoing script with a custom one
* vhost activation shall be moved to this script later to provide different modes

--- a/modules/owncloud-ssl/apache/Dockerfile
+++ b/modules/owncloud-ssl/apache/Dockerfile
@@ -9,10 +9,15 @@ RUN        find conf-enabled   -name '*.conf' -exec basename {} \; | xargs -r a2
  &&        find conf-available  ! -name docker-php.conf -type f -delete                 \
  &&        find sites-available                         -type f -delete
 
+RUN        mv /usr/local/bin/docker-entrypoint.sh  /usr/local/bin/docker-owncloud.sh
+
+COPY       bin/docker-entrypoint.sh    /usr/local/bin/
 COPY       php/docker-owncloud-php.ini /usr/local/etc/php/conf.d/
 
 COPY       apache/vconf/*.conf conf-available/
 COPY       apache/vhost/*.conf sites-available/
+
+RUN        chmod +x /usr/local/bin/docker-entrypoint.sh
 
 RUN        a2enmod ssl         \
                    headers     \
@@ -28,9 +33,9 @@ RUN        a2enmod ssl         \
  &&        a2ensite default    \
                     default-ssl
 
-RUN        sed -i -e '/exec/i\source /etc/apache2/envvars'                                                  /usr/local/bin/docker-entrypoint.sh \
- &&        sed -i -e '/chown -R/a\        find /var/www/html ! -perm 750 -a -type d -exec chmod 750 {} \\;' /usr/local/bin/docker-entrypoint.sh \
- &&        sed -i -e '/chown -R/a\        find /var/www/html ! -perm 640 -a -type f -exec chmod 640 {} \\;' /usr/local/bin/docker-entrypoint.sh
+RUN        sed -i -e '/exec/i\source /etc/apache2/envvars'                                                  /usr/local/bin/docker-owncloud.sh \
+ &&        sed -i -e '/chown -R/a\        find /var/www/html ! -perm 750 -a -type d -exec chmod 750 {} \\;' /usr/local/bin/docker-owncloud.sh \
+ &&        sed -i -e '/chown -R/a\        find /var/www/html ! -perm 640 -a -type f -exec chmod 640 {} \\;' /usr/local/bin/docker-owncloud.sh
 
 EXPOSE     443
 
