extracts ssl configuration as seperate conf
* directory can be stored under server root to allow relative access, which unifies the access between build and runtime

NOTE

* shouldn't be activated by default

* http://httpd.apache.org/docs/2.4/mod/core.html#include

--- a/modules/owncloud-ssl/apache/Dockerfile
+++ b/modules/owncloud-ssl/apache/Dockerfile
@@ -16,6 +16,7 @@ COPY       php/docker-owncloud-php.ini /usr/local/etc/php/conf.d/
 
 COPY       apache/vconf/*.conf conf-available/
 COPY       apache/vhost/*.conf sites-available/
+COPY       apache/vhost/conf   conf
 
 RUN        chmod +x /usr/local/bin/docker-entrypoint.sh
 
