--- a/modules/owncloud-ssl/apache/apache/vhost/ssl-redirect.conf
+++ b/modules/owncloud-ssl/apache/apache/vhost/ssl-redirect.conf
@@ -4,4 +4,8 @@
     RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R=301,L]
 </VirtualHost>
 
+<VirtualHost *:443>
+    Include conf/ssl.conf
+</VirtualHost>
+
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
