renames custom apache variant
* bundle includes not only ssl related configurations, but also other optimizations

NOTE

* sequel should be seen as a apache variant with some additional configurations

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ after_script:
 - docker images
 
 deploy:
-  script: sudo -E bash ./module.sh "." "./release.sh" "ssl"
+  script: sudo -E bash ./module.sh "." "./release.sh" "sequel"
   provider: script
   skip_cleanup: true
   on:
