adds a fpm image
* owncloud doesn't support php 7.2 yet, so we stick to 7.0 for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
     - REPOSITORY="encodeering"
   matrix:
     - BASE=debian ARCH=amd64 VERSION=10.0 VARIANT=apache
+    - BASE=debian ARCH=amd64 VERSION=10.0 VARIANT=fpm
 
 install:
 - bash <(curl https://raw.githubusercontent.com/encodeering/docker-ci/master/install.sh) 0.1.8
