--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
   matrix:
     - BASE=debian ARCH=amd64 VERSION=10.0 VARIANT=apache
     - BASE=debian ARCH=amd64 VERSION=10.0 VARIANT=fpm
+    - BASE=alpine ARCH=amd64 VERSION=10.0 VARIANT=nginx
 
 install:
 - bash <(curl https://raw.githubusercontent.com/encodeering/docker-ci/master/install.sh) 0.1.8
