--- a/modules/apache/sequel/apache/vconf/deflate.conf
+++ b/modules/apache/sequel/apache/vconf/deflate.conf
@@ -1,8 +1,4 @@
-AddOutputFilterByType DEFLATE text/html text/plain text/css application/json
-AddOutputFilterByType DEFLATE application/javascript
-AddOutputFilterByType DEFLATE text/xml application/xml text/x-component
-AddOutputFilterByType DEFLATE application/xhtml+xml application/rss+xml application/atom+xml
-AddOutputFilterByType DEFLATE image/x-icon image/svg+xml application/vnd.ms-fontobject application/x-font-ttf font/opentype
+AddOutputFilterByType DEFLATE application/atom+xml application/javascript application/json application/ld+json application/manifest+json application/rss+xml application/vnd.geo+json application/vnd.ms-fontobject application/x-font-ttf application/x-web-app-manifest+json application/xhtml+xml application/xml font/opentype image/bmp image/svg+xml image/x-icon text/cache-manifest text/css text/plain text/vcard text/vnd.rim.location.xloc text/vtt text/x-component text/x-cross-domain-policy
 
 DeflateCompressionLevel 4
 
