defines nginx vhost configuration using fpm
* a few things have been copied from apache, but a few are missing as well

NOTE

* https://github.com/nextcloud/docker/blob/master/.examples/docker-compose/with-nginx-proxy/postgres/fpm/web/nginx.conf
* https://mozilla.github.io/server-side-tls/ssl-config-generator/

--- a/modules/nginx/alpine/Dockerfile
+++ b/modules/nginx/alpine/Dockerfile
@@ -14,8 +14,15 @@ RUN        deluser                 xfs               \
  &&        addgroup -g 33 -S       www-data          \
  &&        adduser  -u 33 -D -S -G www-data www-data
 
+RUN        apk --no-cache add nginx-mod-http-headers-more
+
 RUN        mkdir  conf-available.d conf-global.d \
  &&        rm -rf conf.d/*
+
+COPY       nginx/nginx.conf   .
+COPY       nginx/vconf/*.conf conf-global.d/
+COPY       nginx/vhost/*.conf conf-available.d/
+COPY       nginx/vhost/conf   conf
 
 COPY       bin/docker-entrypoint.sh /usr/local/bin/
 
