restricts fpm to accept redirects only
NOTE

* https://howtogetonline.com/how-to-harden-your-php-for-better-security.php

--- a/modules/fpm/sequel/Dockerfile
+++ b/modules/fpm/sequel/Dockerfile
@@ -2,4 +2,4 @@ FROM       owncloud:fpm
 
 MAINTAINER Michael Clausen <encodeering@gmail.com>
 
-COPY       php/docker-owncloud-php.ini /usr/local/etc/php/conf.d/
+COPY       php/*.ini /usr/local/etc/php/conf.d/
