changes crt and key path for apache and nginx
* docker secrets are stored under /run/secrets
* uses a more common name in preperation of nextcloud

NOTE

* https://docs.docker.com/engine/swarm/secrets/#intermediate-example-use-secrets-with-a-nginx-service

--- a/modules/apache/sequel/apache/vhost/conf/ssl.conf
+++ b/modules/apache/sequel/apache/vhost/conf/ssl.conf
@@ -1,7 +1,7 @@
 SSLEngine on
 
-SSLCertificateFile    /etc/ssl/certs/owncloud.crt
-SSLCertificateKeyFile /etc/ssl/private/owncloud.key
+SSLCertificateFile    /run/secrets/server.crt
+SSLCertificateKeyFile /run/secrets/server.key
 
 SSLProtocol All -SSLv2 -SSLv3
 SSLCompression off
