--- a/modules/nginx/alpine/nginx/vhost/conf/ssl.conf
+++ b/modules/nginx/alpine/nginx/vhost/conf/ssl.conf
@@ -1,5 +1,5 @@
-ssl_certificate     /etc/ssl/certs/owncloud.crt;
-ssl_certificate_key /etc/ssl/private/owncloud.key;
+ssl_certificate     /run/secrets/server.crt;
+ssl_certificate_key /run/secrets/server.key;
 
 ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
 ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256;
