fixes start command for apache based images
* it seems that any command needs to be redefined in case of overriding the entrypoint
** docker history shows comparable actions

NOTE

* 4c7f8de02724df8cb1f75c4ad93e6532338887fc

--- a/modules/apache/sequel/Dockerfile
+++ b/modules/apache/sequel/Dockerfile
@@ -43,3 +43,5 @@ RUN        a2enmod ssl         \
 WORKDIR    /var/www/html
 
 ENTRYPOINT ["docker-entrypoint.sh"]
+
+CMD        ["apache2-foreground"]
