--- a/modules/fpm/sequel/Dockerfile
+++ b/modules/fpm/sequel/Dockerfile
@@ -2,4 +2,7 @@ FROM       cloud:fpm
 
 MAINTAINER Michael Clausen <encodeering@gmail.com>
 
+COPY       bin       /usr/local/bin
 COPY       php/*.ini /usr/local/etc/php/conf.d/
+
+RUN        chmod +x /usr/local/bin/*.sh
