--- a/modules/apache/sequel/Dockerfile
+++ b/modules/apache/sequel/Dockerfile
@@ -2,6 +2,10 @@ FROM       cloud:apache
 
 MAINTAINER Michael Clausen <encodeering@gmail.com>
 
+RUN        apt-get update                    \
+ &&        apt-get install -y busybox-static \
+ &&        rm -rf /var/lib/apt/lists/*
+
 EXPOSE     80
 EXPOSE     443
 
