--- a/modules/fpm/sequel/Dockerfile
+++ b/modules/fpm/sequel/Dockerfile
@@ -2,6 +2,10 @@ FROM       cloud:fpm
 
 MAINTAINER Michael Clausen <encodeering@gmail.com>
 
+RUN        apt-get update                    \
+ &&        apt-get install -y busybox-static \
+ &&        rm -rf /var/lib/apt/lists/*
+
 COPY       bin       /usr/local/bin
 COPY       php/*.ini /usr/local/etc/php/conf.d/
 
