fixes an issue with cookies for http
* uses http only cookies for http and secure http cookies in conjunction with ssl
** global configuration is loaded first

NOTE

* owncloud apache showed: "you took too tong to login" for http, but https was fine

--- a/modules/apache/sequel/apache/vconf/security.conf
+++ b/modules/apache/sequel/apache/vconf/security.conf
@@ -1,4 +1,4 @@
-Header edit Set-Cookie ^(.*)$ $1;HttpOnly;Secure
+Header edit Set-Cookie ^(.*)$ $1;HttpOnly
 Header unset X-Powered-By
 
 ServerTokens Prod
