--- a/modules/nginx/alpine/nginx/vconf/security.conf
+++ b/modules/nginx/alpine/nginx/vconf/security.conf
@@ -4,7 +4,7 @@ add_header X-Robots-Tag none;
 add_header X-Download-Options noopen;
 add_header X-Permitted-Cross-Domain-Policies none;
 
-proxy_cookie_path / "/; HTTPOnly; Secure";
+proxy_cookie_path / "/; HTTPOnly;";
 more_clear_headers X-Powered-By;
 
 server_tokens off;
