--- a/modules/nginx/alpine/nginx/vhost/conf/ssl.conf
+++ b/modules/nginx/alpine/nginx/vhost/conf/ssl.conf
@@ -10,5 +10,6 @@ ssl_session_timeout 5m;
 ssl_session_cache off;
 
 add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload";
+proxy_cookie_path / "/; HTTPOnly; Secure";
 
 fastcgi_param HTTPS on;
