--- a/modules/apache/sequel/apache/vhost/conf/ssl.conf
+++ b/modules/apache/sequel/apache/vhost/conf/ssl.conf
@@ -9,6 +9,7 @@ SSLHonorCipherOrder On
 SSLCipherSuite ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256
 
 Header always set Strict-Transport-Security "max-age=15768000; includeSubDomains; preload"
+Header edit Set-Cookie ^(.*)$ $1;HttpOnly;Secure
 
 <FilesMatch "\.(cgi|shtml|phtml|php)$">
         SSLOptions +StdEnvVars
