--- a/modules/nginx/alpine/nginx/nginx.conf
+++ b/modules/nginx/alpine/nginx/nginx.conf
@@ -19,6 +19,8 @@ http {
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
+    client_max_body_size 2G;
+
     sendfile on;
 
     root /var/www/html/;
