fixes an issue with binary compatibility on headers mod
* modules needs to be compiled with the very same settings, see nginx -V
** uses apk packages from nginx dockerfile

* doesn't overwrite existing modules, should therefore only copy new modules if both use the same base image

NOTE

* https://www.oodlestechnologies.com/blogs/Setup-Headers-More-Nginx-Module-Using-Dynamic-Compilation

--- a/modules/nginx/alpine/Dockerfile
+++ b/modules/nginx/alpine/Dockerfile
@@ -1,3 +1,23 @@
+FROM       nginx:alpine AS modules
+
+ARG        MOD_HEADERS_URL=https://github.com/openresty/headers-more-nginx-module/archive/v0.33.tar.gz
+
+WORKDIR    /usr/local/src
+
+RUN        apk add coreutils grep gcc libc-dev make openssl-dev pcre-dev zlib-dev linux-headers curl gnupg1 libxslt-dev gd-dev geoip-dev
+RUN        mkdir nginx nginx-headers-more
+RUN        curl -L ${MOD_HEADERS_URL} | tar -C nginx-headers-more --strip-components=1 -xvzf -
+RUN        curl -L http://nginx.org/download/nginx-${NGINX_VERSION}.tar.gz | tar -C nginx --strip-components=1 -xvzf -
+
+WORKDIR    /usr/local/src/nginx
+
+RUN        ./configure --add-dynamic-module=../nginx-headers-more `2>&1 nginx -V | grep -oP '(?<=configure arguments: ).*'`
+RUN        make modules
+RUN        cp -npv objs/*.so /etc/nginx/modules
+RUN        find /etc/nginx/modules/ -iname '*module.so' -exec sh -c 'echo $1; sed -i "1i load_module modules/`basename $1`\;" /etc/nginx/nginx.conf' -- {} \;
+RUN        nginx -t
+
+
 FROM       nginx:alpine
 
 MAINTAINER Michael Clausen <encodeering@gmail.com>
@@ -14,7 +34,7 @@ RUN        deluser                 xfs               \
  &&        addgroup -g 33 -S       www-data          \
  &&        adduser  -u 33 -D -S -G www-data www-data
 
-RUN        apk --no-cache fetch -q --stdout nginx-mod-http-headers-more | tar -xvz -C / --exclude '.*'
+COPY       --from=modules /etc/nginx/modules /etc/nginx/modules
 
 RUN        mkdir  conf-available.d conf-global.d \
  &&        rm -rf conf.d/*
