--- a/modules/nginx/alpine/nginx/vconf/security.conf
+++ b/modules/nginx/alpine/nginx/vconf/security.conf
@@ -3,6 +3,7 @@ add_header X-XSS-Protection "1; mode=block";
 add_header X-Robots-Tag none;
 add_header X-Download-Options noopen;
 add_header X-Permitted-Cross-Domain-Policies none;
+add_header Referrer-Policy no-referrer;
 
 proxy_cookie_path / "/; HTTPOnly;";
 more_clear_headers X-Powered-By;
