--- a/modules/nginx/alpine/nginx/vhost/conf/base.conf
+++ b/modules/nginx/alpine/nginx/vhost/conf/base.conf
@@ -40,7 +40,7 @@ location ~ ^/(?:index|remote|public|cron|core/ajax/update|status|ocs/v[12]|updat
     fastcgi_request_buffering off;
 }
 
-location ~ \.(?:css|js|woff|svg|gif)$ {
+location ~ \.(?:css|js|woff[2]?|svg|gif)$ {
     try_files $uri /index.php$uri$is_args$args;
     add_header Cache-Control "public, max-age=15778463";
     access_log off;
