handles ocm provider in nginx configuration
* warning from nextcloud upgrade

--- a/modules/nginx/alpine/nginx/vhost/conf/base.conf
+++ b/modules/nginx/alpine/nginx/vhost/conf/base.conf
@@ -28,7 +28,7 @@ location ~ ^/(?:\.|autotest|occ|issue|indie|db_|console) {
     deny all;
 }
 
-location ~ ^/(?:index|remote|public|cron|core/ajax/update|status|ocs/v[12]|updater/.+|ocs-provider/.+)\.php(?:$|/) {
+location ~ ^/(?:index|remote|public|cron|core/ajax/update|status|ocs/v[12]|updater/.+|oc[ms]-provider/.+)\.php(?:$|/) {
     fastcgi_split_path_info ^(.+\.php)(/.*)$;
     include fastcgi_params;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -38,6 +38,11 @@ location ~ ^/(?:index|remote|public|cron|core/ajax/update|status|ocs/v[12]|updat
     fastcgi_pass php;
     fastcgi_intercept_errors on;
     fastcgi_request_buffering off;
+}
+
+location ~ ^\/(?:updater|oc[ms]-provider)(?:$|\/) {
+    try_files $uri/ =404;
+    index index.php;
 }
 
 location ~ \.(?:css|js|woff[2]?|svg|gif)$ {
