--- a/modules/nginx/alpine/Dockerfile
+++ b/modules/nginx/alpine/Dockerfile
@@ -5,6 +5,6 @@ MAINTAINER Michael Clausen <encodeering@gmail.com>
 WORKDIR    ${NGINX_CONFDIR}
 
 COPY       nginx/vconf/*.conf conf-global.d/
-COPY       nginx/vhost/conf   conf
+COPY       nginx/vhost/*.conf conf/
 
 WORKDIR    /var/www/html
