removes explicit upstream definition for php
* nginx server start is aborted if the host couldn't be resolved

NOTE

* https://sandro-keil.de/blog/let-nginx-start-if-upstream-host-is-unavailable-or-down/

--- a/modules/nginx/alpine/nginx/vhost/base.conf
+++ b/modules/nginx/alpine/nginx/vhost/base.conf
@@ -1,3 +1,5 @@
+resolver 127.0.0.11 valid=30s;
+
 if ($server_protocol ~* "HTTP/1.0") {
     return 444;
 }
@@ -29,13 +31,17 @@ location ~ ^/(?:\.|autotest|occ|issue|indie|db_|console) {
 }
 
 location ~ ^/(?:index|remote|public|cron|core/ajax/update|status|ocs/v[12]|updater/.+|oc[ms]-provider/.+)\.php(?:$|/) {
-    fastcgi_split_path_info ^(.+\.php)(/.*)$;
+    set $upstream php:9000;
+
+    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+
     include fastcgi_params;
     fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
     fastcgi_param PATH_INFO $fastcgi_path_info;
     fastcgi_param modHeadersAvailable true;
     fastcgi_param front_controller_active true;
-    fastcgi_pass php;
+
+    fastcgi_pass $upstream;
     fastcgi_intercept_errors on;
     fastcgi_request_buffering off;
 }
