adjusts configuration changes from nginx sequel image
* base image has changed and added some configurations

--- a/modules/nginx/alpine/Dockerfile
+++ b/modules/nginx/alpine/Dockerfile
@@ -4,7 +4,6 @@ MAINTAINER Michael Clausen <encodeering@gmail.com>
 
 WORKDIR    ${NGINX_CONFDIR}
 
-COPY       nginx/vconf/*.conf conf-global.d/
-COPY       nginx/vhost/*.conf conf/
+COPY       nginx/ .
 
 WORKDIR    /var/www/html
